VERSION 0.18 (2017-11-13)
  * #150: checking if R version is available early while installing deps, building,
     zipping and packing.

VERSION 0.17 (2017-11-11)
  * prj_pack can be told to pack only selected project packages or not to include
     master scripts in the pack.
  * fixed bug in package version requirements detection. It used to create large
     available packages set with duplicates.
  * fixed error with handling imports with dot in name.
  * debian & redhat OS version detection corrected
  * if NAMESPACE file of source package is built with roxygen, before building
     documentation non present imports from DESCRIPTIO are appended. Previously
     they replaced content.
  * while building source packages to binary form neither documentation is
     rebuilded nor imports validity testing is performed.
     e.g. withr source package does not have all requirements to build documentation.
  * while building source packages to binary form Rcpp:compileAttributes is skipped.
     It does not not work properly with newest Rcpp (e.g. for plyr).
  * updating of PACKAGES.rds fixed while uploading to S3 repository.

VERSION 0.16 (2017-11-08)
  * Project zip can be created for projects without master scripts.
  * prj_pack function added to export project sources. It is usefull for building
     project in docker and for giving project sources your peers to play with it.

VERSION 0.15 (2017-11-04)
  * Creation of PKGZIP with dependencies and filtering against packages existing
     in passed repository.
  * Uploading packages into repository together with dependencies and filtering
     against existing packages present in it.

VERSION 0.14 (2017-10-30)
  * Handling of multiple Dir repositories in project fixed.

VERSION 0.13 (2017-10-23)
  * #146: After installing package it is checked if it was built for proper
     R version. MRAN has packages built under 3.3.2 presented as built for 3.4.