@@ -1,6 +1,8 @@
 VERSION 0.18 (2017-11-13)
   * #150: checking if R version is available early while installing deps, building,
      zipping and packing.
+  * for R3.4 it does not creates PACAKGES.rds (and removes it if found in repo) as
+     it does not support multiple package versions.
 
 VERSION 0.17 (2017-11-11)
   * prj_pack can be told to pack only selected project packages or not to include
